# tensorflow-rocm

./: .bazelrc  .gitignore  RELEASE.md  configure.py  pyproject.toml
tensorflow/: workspace2.bzl
tensorflow/compiler/mlir/: register_common_dialects.cc
tensorflow/compiler/mlir/lite/: tf_tfl_passes.cc
tensorflow/compiler/mlir/python/: mlir.cc
tensorflow/compiler/mlir/stablehlo/: BUILD  stablehlo.cc
tensorflow/compiler/mlir/tf2xla/tests/: legalize-tf.mlir
tensorflow/compiler/mlir/tosa/transforms/: legalize_common.cc  legalize_tf.cc  (+1 more)
tensorflow/core/common_runtime/device/: device_id_manager_test.cc
tensorflow/core/data/: compression_utils.cc
tensorflow/core/grappler/optimizers/: auto_mixed_precision.cc  generic_layout_optimizer.cc
tensorflow/core/ir/: tf_op_wrapper.h
tensorflow/core/kernels/: gpu_prim.h  relu_op_gpu.cu.cc  unique_op_gpu.cu.h
tensorflow/core/kernels/mlir_generated/: gpu_binary_ops_test.cc
tensorflow/core/nccl/: nccl_manager.cc
tensorflow/core/util/: gpu_device_functions.h  gpu_kernel_helper_test.cu.cc  gpu_launch_config.h
tensorflow/python/distribute/: multi_process_runner_test.py
tensorflow/tools/ci_build/: Dockerfile.rocm
tensorflow/tools/tf_sig_build_dockerfiles/: Dockerfile.rocm.deb10  Dockerfile.rocm.deb10-art  Dockerfile.rocm.manylinux2014  Dockerfile.rocm.manylinux_2_28  Dockerfile.rocm.rt.deb10  Dockerfile.rocm.ub20  Dockerfile.rocm.ub22  Dockerfile.rocm.ub24  devel.packages.rocm.deb10.txt  setup.build-python_ubuntu.sh  setup.rocm.sh
tensorflow/tools/tf_sig_build_dockerfiles/devel.usertools/: gpu.bazelrc
(+12 files in other folders)
