[project]
name = "tensorflow-rocm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "absl-py==2.1.0",
    "astor==0.7.1",
    "astunparse==1.6.3",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "dill==0.3.7",
    "flatbuffers==24.3.25",
    "gast==0.4.0",
    "google-pasta==0.2.0",
    "grpcio==1.64.1",
    "h5py==3.11.0",
    "idna==3.7",
    "jax==0.4.7",
    "keras==3.5.0",
    "libclang==18.1.1",
    "lit==17.0.6",
    "markdown==3.6",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.0",
    "namex==0.0.8",
    "numpy==2.0.2",
    "opt-einsum==3.3.0",
    "optree==0.12.1",
    "packaging==23.2",
    "portpicker==1.6.0",
    "protobuf==4.25.3",
    "psutil==5.9.8",
    "pygments==2.18.0",
    "requests==2.32.3",
    "rich==13.7.1",
    "scipy==1.13.1",
    "setuptools==70.0.0",
    "six==1.16.0",
    "tblib==2.0.0",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "termcolor==2.3.0",
    "typing-extensions==4.8.0",
    "urllib3==2.2.2",
    "werkzeug==3.0.3",
    "wheel==0.41.3",
    "wrapt==1.16.0",
]
